--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="EMALTDA Web Page" />
   <title>EMALTDA</title>
+
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
